--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 	<title> Meu Site </title>
 </head>
 <body>
-	Site de teste para o git.
+	Site de teste para o git.<br/>
+
+	&lt;ul&gt;
+    &lt;li&gt;&lt;a href="index.html"&gt;Home&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href="sobre.html"&gt;Sobre&lt;/a&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;a href="contato.html"&gt;Contato&lt;/a&gt;&lt;/li&gt;
+	&lt;/ul&gt;
 
 </body>
 </html>
