--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<h1>Site de teste para o git<h1><br/>
+	<h1>Site de teste para o git.<h1><br/>
 
 	&lt;ul&gt;
     &lt;li&gt;&lt;a href="index.html"&gt;Home&lt;/a&gt;&lt;/li&gt;
