Inclusão de alerta no final da página

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 </head>
 <body>
 
-	<h1>Site de teste para o git.<h1><br/>
+	<h1>Site de teste para o git.</h1><br/>
 
 	&lt;ul&gt;
     &lt;li&gt;&lt;a href="index.html"&gt;Home&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href="sobre.html"&gt;Sobre&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href="contato.html"&gt;Contato&lt;/a&gt;&lt;/li&gt;
 	&lt;/ul&gt;
+
+	<h3>Testando merge sem comflitos</h3>
 
 </body>
 </html>
