--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<h3>Testando merge sem comflitos</h3>
 
-	<h2>Testando merge sem comflitos <h4>2</h4> </h2>
+	<h2>Testando merge sem comflitos </h2>
 
 
 
