--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 	</ul>
 	
 
-	<h3>Testando merge sem comflitos</h3>
-
-	<h2>Testando merge sem comflitos </h2>
+	<h2 align="center">Testando merge sem comflitos</h2>	
 
 
 
